--- a/src/CZWA.Web/Views/Home/Index.cshtml
+++ b/src/CZWA.Web/Views/Home/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@model  CZWA.ViewModels.HomeViewModel
+
 @{
     ViewData["Title"] = "Home Page";
 }
 
+@await Component.InvokeAsync(nameof(NavbarComponent), new { Model.User })
+
 <div id="homeView" class="container-fluid">
     <h1>
         Hallo...
-        <span data-bind="text: (name()+', '+vorname())"></span>
-        ﻿<a asp-controller="Account" asp-action="Logout">Logout</a>
     </h1>
 
     <input type=text id="textInput" placeholder="Enter your text" data-bind="value: tinput" />
