--- a/src/CZWA.Web/Views/Admin/Index.cshtml
+++ b/src/CZWA.Web/Views/Admin/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Admin Page";
 }
 
-@await Component.InvokeAsync(nameof(NavbarComponent), new { Model.User })
+@await Component.InvokeAsync(nameof(NavbarComponent))
 
 <div id="adminView" class="container-fluid">
     <h1>
