--- a/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
+++ b/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
@@ -19,7 +19,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <span class="navbar-brand usr-name" data-bind="text: user.vorname"></span>
+                        <span class="navbar-brand usr-name" data-bind="text: userViewModel.username"></span>
                     </li>
                     <li>
                         <form>
