--- a/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
+++ b/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
@@ -15,6 +15,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <!-- Todo Asmin ausblenden wenn kein Admin !!!  -->
                     <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
