--- a/src/CZWA.Web/Views/Admin/Index.cshtml
+++ b/src/CZWA.Web/Views/Admin/Index.cshtml
@@ -9,38 +9,38 @@
 <div id="adminView" class="view container-fluid">
     <div class="row">
         <div class="col-md-12">
-                <div class="panel panel-primary">
-                    <div class="panel-heading clearfix">
-                            <div class="col-md-12">
-                                <div class="col-md-6">
-                                    <h5 class="control-label">Benutzer</h5>
-                                </div>
-                                <div class="col-md-6">
-                                    <th_select th-isFC="false" th-withLabel="false" th-label="User" th-value="SelectedUserId" th-options="Users" th-ovalue="UserId" th-otext="Username"></th_select>
-                                </div>
-                            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading clearfix">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <h5 class="control-label">Benutzer</h5>
+                        </div>
+                        <div class="col-md-3">
+                            <th_select th-isFC="false" th-withLabel="false" th-label="User" th-value="selectedUserId" th-options="Users" th-ovalue="UserId" th-otext="Username"></th_select>
+                        </div>
                     </div>
-                    <div class="panel-body">
-                        <div class="row">
-                            <th_li th-label="Name" th-input="user().name" th-col="6"></th_li>
-                            <th_li th-label="Vorname" th-input="user().vorname" th-col="6"></th_li>
-                        </div>
-                        <div class="row">
-                            <th_li th-label="Username" th-input="user().username" th-col="6"></th_li>
-                            <span data-bind="text: (selectedRoleId()[0])"></span>
-                            @*<th_select th-col="6" th-label="User" th-value="SelectedRoleId" th-options="user().roles" th-ovalue="UserId" th-otext="Username"></th_select>*@
-                            @*<select class='form-control show-tick input-sm' data-style='btn btn-info btn-sm' data-dropdown-align-right='true' data-bind='selectPicker: selectedRoleId,  selectPickerOptions: { optionsArray: {Options} }'></select>*@
-                            <th_enum th-label="Rolle" th-value="SelectedRoleId" th-type="@typeof(UserRoleType)"></th_enum>
-                        </div>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <th_li th-label="Username" th-input="user().username" th-col="4"></th_li>
+                        <th_li th-label="Name" th-input="user().name" th-col="4"></th_li>
+                        <th_li th-label="Vorname" th-input="user().vorname" th-col="4"></th_li>
+                    </div>
+                    <div class="row row-buffTop">
+                        <th_enum th-label="Rolle" th-value="user().roles" th-type="@typeof(UserRoleType)" th-col="8"></th_enum>
+                        <th_crud th-show-edit="false" th-col="4"></th_crud>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 <script>
     $(document).ready(function () {
         var viewmodel = new ViewModels.AdminViewData(@Html.Raw(Json.Serialize(Model)));
         ko.applyBindings(viewmodel, document.getElementById('adminView'));
+
+        $(".selectpicker").selectpicker('refresh');
     });
 </script>
