--- a/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
+++ b/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model  CZWA.ViewModels.NavbarViewModel
 @using CZWA.Services
 @using CZWA.Common
-    @inject  LoginService ls
+    @inject  AccountService ls
 
     <div id="navbarContent" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
