--- a/src/CZWA.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/src/CZWA.Web/Views/Shared/_LayoutLogin.cshtml
@@ -7,7 +7,7 @@
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-dark.css" />
+        <link rel="stylesheet" href="~/css/bootstrap-dark.css" />
         <link rel="stylesheet" href="~/css/site.css" />
         @*<link rel="stylesheet" href="~/css/main.css" />*@
     </environment>
