--- a/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
+++ b/src/CZWA.Web/Views/Shared/Components/NavbarComponent/Default.cshtml
@@ -18,7 +18,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-left">
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                        @if (ls.HasRole(UserRoleType.Admin))
+                        @if (await ls.HasRole(UserRoleType.Admin))
                         {
                             <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                         }
